# ytm

./: .gitignore  AGENTS.md  BUILD_WORKFLOW.md  Cargo.toml  MAC_CHECK_NOTE.txt  README.md  dev_manual.md  dns_test  dns_test.rs  flake.nix  last_results.json  log.txt  reqwest_test.rs  result  rustfmt.toml  youtube-mpc  ytm_mac_update_README.md
.github/workflows/: ci.yml  release.yml
Formula/: ytm.rb
sdfgsxdf/: api.rs  cache.rs  config.rs  main.rs
src/: api.rs  cache.rs  commands.rs  config.rs  main.rs  mpv.rs
