[package]
name = "ytm"
version = "0.2.5"
edition = "2021"



[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
futures = "0.3"
dirs = "5.0"
base64 = "0.22"
nix = { version = "0.27", default-features = false, features = ["signal"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }

[dev-dependencies]
tempfile = "3.8"