[package]
name = "ytm"
version = "0.3.1"
edition = "2021"



[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "5.0"
base64 = "0.22"
nix = { version = "0.27", default-features = false, features = ["signal"] }
rustypipe = "0.11"

[dev-dependencies]
tempfile = "3.8"
